# tau

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  conanfile.py
examples/: CMakeLists.txt  dxf_points.cpp  pyr2ypr.cpp  rotation.cpp
tau/: CMakeLists.txt  angles.h  angular.h  arithmetic.h  bilinear.h  camera_parameters.cpp  camera_parameters.h  chess.cpp  chess.h  chess_settings.h  chess_solution.h  color.h  color_map.cpp  color_map.h  color_map_settings.cpp  color_map_settings.h  comparisons.h  convolve.h  corner.cpp  corner.h  csv.cpp  csv.h  dxf.cpp  dxf.h  eigen.h  eigen_shim.h  error.h  filter.h  gaussian.h  gradient.h  harris.h  horner.h  image.h  intrinsics.h  kabsch.h  lens.h  line2d.cpp  line2d.h  line3d.h  literals.h  (+36 more)
tau/color_maps/: gradient.h  gray.h  rgb.h  turbo.h
test/: CMakeLists.txt  angles_tests.cpp  arithmetic_sort.cpp  arithmetic_tests.cpp  bilinear_test.cpp  color_map_test.cpp  color_test.cpp  convolve_tests.cpp  csv_tests.cpp  eigen_test.cpp  extrinsics_tests.cpp  gradient_test.cpp  harris_tests.cpp  intrinsics_tests.cpp  lens_tests.cpp  line_tests.cpp  normalize_tests.cpp  percentile_tests.cpp  point.h  point_tests.cpp  polynomial_tests.cpp  power_series_test.cpp  projection_tests.cpp  random_region.h  region_tests.cpp  rotation_tests.cpp  row_convolve_tests.cpp  size_tests.cpp  turbo_matrix.h  variate_tests.cpp  vector2d_tests.cpp  vector3d_tests.cpp  view_tests.cpp  wavelet_tests.cpp
test/test_data/: CMakeLists.txt  test.csv
